--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -213,6 +213,9 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    compile project(':react-native-share-extension')
+    compile "com.facebook.react:react-native:+"
 }
 
 // Run this once to be able to run the application with BUCK
