--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-modalbox": "^2.0.0",
+    "react-native-share-extension": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
